[gd_scene load_steps=14 format=2]

[ext_resource path="res://water.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pot.tscn" type="PackedScene" id=2]
[ext_resource path="res://treeDex.tscn" type="PackedScene" id=4]
[ext_resource path="res://startUP.gd" type="Script" id=5]
[ext_resource path="res://BaseFarmGrid.tscn" type="PackedScene" id=6]
[ext_resource path="res://aSeeds.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/HUD/big tree.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD/circle_slightly_smaller.png" type="Texture" id=9]
[ext_resource path="res://Assets/HUD/farm.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 58, 60 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 58, 60 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 58, 60 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 58, 60 )

[node name="Planting" type="Node2D"]
script = ExtResource( 5 )

[node name="Pot" parent="." instance=ExtResource( 2 )]
position = Vector2( 517.974, 221 )

[node name="water" parent="." instance=ExtResource( 1 )]
position = Vector2( 929.359, 69.9235 )

[node name="Seeds" type="Control" parent="."]
margin_left = -0.212673
margin_top = 0.212671
margin_right = 39.7873
margin_bottom = 40.2127
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aSeeds" parent="Seeds" groups=[
"seedGroup",
] instance=ExtResource( 7 )]
position = Vector2( 965.961, 515.282 )

[node name="treeDex" parent="." instance=ExtResource( 4 )]
pause_mode = 2
visible = false
margin_left = 1.59003
margin_right = 1.59003

[node name="treeDex_button" type="Button" parent="."]
margin_left = 23.6374
margin_top = 9.41404
margin_right = 78.6374
margin_bottom = 64.414
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseFarmGrid" parent="." instance=ExtResource( 6 )]

[node name="FarmButton" type="Button" parent="."]
margin_left = 23.637
margin_top = 87.606
margin_right = 78.637
margin_bottom = 142.606
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_shape_entered" from="Pot" to="Pot" method="_on_Pot_area_shape_entered"]
[connection signal="pressed" from="treeDex_button" to="." method="_on_treeDex_button_pressed"]
[connection signal="add_seeds" from="BaseFarmGrid" to="." method="_new_seed"]
[connection signal="return_to_planting" from="BaseFarmGrid" to="." method="_return_to_planting"]
[connection signal="pressed" from="FarmButton" to="." method="_on_FarmButton_pressed"]
